Fixed about alignment

--- a/css/main.css
+++ b/css/main.css
@@ -585,12 +585,11 @@ input::-moz-focus-inner {
 --------------------------------------------------------------- */
 .row {
    width: 96%;
-   max-width: 1020px;
 }
 /* fixed width for IE8 */
-.ie .row { width: 1000px ; }
+.ie .row { width: 96% ; }
 
-.narrow .row { max-width: 980px; }
+.narrow .row { max-width: 96%; }
 
 .row .row { width: auto; max-width: none; margin: 0px; }
 
